[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Player/playerController.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://Textures/Crosshair.png" type="Texture" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="CapsuleMesh" id=3]

[node name="Player" type="KinematicBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
input_ray_pickable = false
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, -4.37114e-08, -4.37114e-08, 1.91069e-15, -1, 0, 1, 1.91069e-15, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Rotation_Helper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Rotation_Helper"]
environment = ExtResource( 2 )
current = true
fov = 90.0
near = 0.1
far = 350.0

[node name="Sprite3D" type="Sprite3D" parent="Rotation_Helper/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.750665 )
opacity = 0.8
pixel_size = 0.0001
transparent = false
double_sided = false
texture = ExtResource( 3 )

[node name="3rdPerson" type="Camera" parent="."]
transform = Transform( -0.0761605, -0.189184, 0.978984, 0, 0.490918, 0.0948676, -0.66473, 0.00963355, -0.0498514, 10.7265, 4.47114, -0.344216 )

[node name="RayFront" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collision_mask = 512

[node name="RayFrontFoot" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.4708, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collision_mask = 512

[node name="RayFrontHead" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26119, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collision_mask = 512

[node name="RayBack" type="RayCast" parent="."]
transform = Transform( -1, 0, -1.81195e-07, 0, 1, 0, 1.50996e-07, 0, -1.2, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collision_mask = 512

[node name="RayLeft" type="RayCast" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 512

[node name="RayRight" type="RayCast" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 512

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null
